--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
 
-body{
+body {
     margin: 0px auto;
     padding: 0px;
     height: 100vh;
@@ -13,21 +13,21 @@ body{
     flex-direction: column;
 }
 
-p{
+p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     text-transform: uppercase;
     color: #FFFFFF;
 }
 
-.header-container{
+.header-container {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
 
-.header{
+.header {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -36,7 +36,7 @@ p{
     background-color: #060C2A;
 }
 
-.menu{
+.menu {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -45,60 +45,61 @@ p{
     background-color: #FF3B4C;
 }
 
-.main-container{
+.main-container {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
     flex-shrink: 1;
 }
 
-.hero{
+.hero {
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #0387CA;
-    flex-grow: 1;
+    flex-grow: 2;
     min-height: 128px;
 }
 
-.main{
+.main {
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #14314A;
-    min-height: 250px;
+    min-height: 100px;
     width: 50%;
 }
 
-.main-wrap{
+.main-wrap {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-grow: 1;
 }
 
-.ie-container{
+.ie-container {
     display: flex;
     flex-direction: column;
     width: 30%;
 }
 
-.image{
+.image {
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #B4E5E7;
-    min-height: 125px;
+    flex-grow: 1;
 }
 
-.extra{
+.extra {
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #00BE97;
-    min-height: 125px;
+    flex-grow: 1;
 }
 
-.banner{
+.banner {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -106,18 +107,26 @@ p{
     background-color: #FFD361;
 }
 
-@media screen  and (max-width: 768px){
-    .header-container{
+@media screen and (max-width: 768px) {
+    .header-container {
         flex-direction: column;
     }
-    .header, .menu{
+
+    .header,
+    .menu {
         width: 100%;
         height: 64px;
     }
-    .main-wrap{
+
+    .main-wrap {
         flex-direction: column;
-    }   
-    .main, .image, .ie-container, .extra, .hero{
+    }
+
+    .main,
+    .image,
+    .ie-container,
+    .extra,
+    .hero {
         width: 100%;
         min-height: 64px;
     }
